# cel-go

cel/: BUILD.bazel  activation_test.go  async.go  async_test.go  cel_test.go  decls.go  decls_test.go  options.go  program.go  program_test.go
cel/async/: BUILD.bazel  async.go  async_internal_test.go  async_test.go  cache.go  cache_internal_test.go  cache_test.go
common/decls/: decls.go
common/functions/: functions.go
common/types/: err.go
ext/: bindings.go
interpreter/: BUILD.bazel  activation.go  async.go  attribute_patterns.go  attribute_patterns_test.go  attributes.go  attributes_test.go  decorators.go  evalstate.go  frame.go  frame_test.go  interpretable.go  interpretable_test.go  interpreter.go  interpreter_test.go  planner.go  planner_test.go  runtimecost.go  runtimecost_test.go
test/: async.go
